fix: 100% ratio on collage

--- a/sections/collage.liquid
+++ b/sections/collage.liquid
@@ -60,7 +60,7 @@
                 card_product: block.settings.product,
                 show_quick_add: true,
                 is_collage: true,
-                media_aspect_ratio: 'rectangle',
+                media_aspect_ratio: '100%',
                 show_secondary_image: block.settings.second_image,
                 extend_height: true,
                 border_color: section.settings.border_color
